# SeoFleet

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: concepts.md  getting-started.md
docs/integrations/: ci.md
python/: README.md  pyproject.toml
python/examples/: README.md
python/examples/01-single-site-check/: check_site.py
python/examples/02-fleet-scan/: run_fleet.py
python/examples/03-ci-gate/: gate.py
python/src/llmscout/: __init__.py  cli.py  cli_lib.py  config.py  errors.py  fetch_utils.py  fleet.py  format.py  html_util.py  init.py  report_file.py  runner.py  site_resources.py  types.py
python/src/llmscout/checks/: __init__.py
python/src/llmscout/checks/geo/: ai_crawler_directives.py  content_extraction.py  faq_schema.py  llms_txt.py  organization_schema.py  speakable_schema.py  structured_data.py
python/src/llmscout/checks/technical/: canonical.py  heading_structure.py  image_alt.py  image_weight.py  meta_description.py  open_graph.py  redirect_chain.py  robots_meta_directives.py  sitemap_xml.py  title.py  twitter_card.py
python/src/seofleet/: __init__.py  cli.py  cli_lib.py  config.py  errors.py  fetch_utils.py  fleet.py  format.py  html_util.py  init.py  report_file.py  runner.py  site_resources.py  slugify.py  types.py
python/src/seofleet/checks/: __init__.py
python/src/seofleet/checks/geo/: ai_crawler_directives.py  content_extraction.py  faq_schema.py  link_header.py  markdown_negotiation.py  organization_schema.py  speakable_schema.py  structured_data.py
python/src/seofleet/checks/technical/: canonical.py  heading_structure.py  image_alt.py  image_weight.py  meta_description.py  open_graph.py  robots_meta_directives.py  robots_txt.py  title.py  twitter_card.py
python/tests/: conftest.py  test_checks_geo.py  test_checks_technical.py  test_cli.py  test_config.py  test_e2e.py  test_fetch_utils.py  test_fleet.py  test_format.py  test_html_util.py  test_init.py  test_report_file.py  test_runner.py  test_site_resources.py  test_slugify.py
src/: cli-lib.ts  cli.ts  config.ts  errors.ts  fetch-utils.ts  fleet.ts  format.ts  index.ts  init.ts  report-file.ts  runner.ts  site-resources.ts  slugify.ts  types.ts
src/checks/: index.ts
src/checks/geo/: ai-crawler-directives.ts  content-extraction.ts  faq-schema.ts  link-header.ts  llms-txt.ts  markdown-negotiation.ts  organization-schema.ts  speakable-schema.ts  structured-data.ts
src/checks/technical/: canonical.ts  heading-structure.ts  image-alt.ts  image-weight.ts  meta-description.ts  open-graph.ts  redirect-chain.ts  robots-meta-directives.ts  robots-txt.ts  sitemap-xml.ts  title.ts  twitter-card.ts
test/: cli-lib.test.ts  cli.test.ts  config.test.ts  fetch-utils.test.ts  fleet.test.ts  format.test.ts  init.test.ts  integration.test.ts  report-file.test.ts  runner.test.ts  site-resources.test.ts  slugify.test.ts  test-helpers.ts
test/checks/: index.test.ts
test/checks/geo/: ai-crawler-directives.test.ts  content-extraction.test.ts  faq-schema.test.ts  link-header.test.ts  llms-txt.test.ts  markdown-negotiation.test.ts  organization-schema.test.ts  speakable-schema.test.ts  structured-data.test.ts
test/checks/technical/: canonical.test.ts  heading-structure.test.ts  image-alt.test.ts  image-weight.test.ts  meta-description.test.ts  open-graph.test.ts  redirect-chain.test.ts  robots-meta-directives.test.ts  robots-txt.test.ts  sitemap-xml.test.ts  title.test.ts  twitter-card.test.ts
