[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LLMScout-cli"
version = "0.2.0"
description = "Zero-config, cross-platform SEO and GEO (generative engine optimization) checker: 12 checks against a live site, plus multi-site fleet mode, in pure Python with no extra runtime toolchain."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = ["seo", "geo", "generative-engine-optimization", "cli", "agent-native", "website-audit", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "build>=1.0,<2",
  "twine>=5.0,<7",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/LLMScout"
Repository = "https://github.com/RudrenduPaul/LLMScout"
"Bug Tracker" = "https://github.com/RudrenduPaul/LLMScout/issues"
Changelog = "https://github.com/RudrenduPaul/LLMScout/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RudrenduPaul/LLMScout/blob/main/docs/getting-started.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
LLMScout = "LLMScout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/LLMScout"]

[tool.hatch.build.targets.sdist]
include = [
  "src/LLMScout",
  "tests",
  "README.md",
  "LICENSE",
]
exclude = [
  ".gitignore",
  "examples",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
