[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmscout-cli"
version = "0.3.1"
description = "Zero-dependency, cross-platform LLM/GEO/AEO checker CLI — 21 checks, pure Python stdlib, no runtime dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = ["llm", "geo", "aeo", "seo", "generative-engine-optimization",
            "answer-engine-optimization", "ai-seo", "llms-txt", "cli",
            "technical-seo", "ai-visibility", "llm-optimization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "build>=1.0,<2",
  "twine>=5.0,<7",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/LLMScout"
Repository = "https://github.com/RudrenduPaul/LLMScout"
"Bug Tracker" = "https://github.com/RudrenduPaul/LLMScout/issues"
Changelog = "https://github.com/RudrenduPaul/LLMScout/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RudrenduPaul/LLMScout/blob/main/docs/getting-started.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
llmscout = "llmscout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llmscout"]

[tool.hatch.build.targets.sdist]
include = [
  "src/llmscout",
  "tests",
  "README.md",
  "LICENSE",
]
exclude = [
  ".gitignore",
  "examples",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
